# PyFR-Catalyst

./: CMakeLists.txt  README.md
Data/: CMakeLists.txt
Macros/: CMakeLists.txt  Preset1.py  Preset2.py  Preset3.py
Source/: CMakeLists.txt
Source/PyFR/: ArrayHandleExposed.h  Bounds.h  CMakeLists.txt  CatalystData.h  ColorTable.cu  ColorTable.h  CrinkleClip.h  Gradients.h  IsosurfaceHexahedra.h  MergePoints.h  PyFRContour.cu  PyFRContour.h  PyFRContourData.cu  PyFRContourData.h  PyFRContourFilter.cu  PyFRContourFilter.h  PyFRConverter.cu  PyFRConverter.h  PyFRCrinkleClipFilter.cu  PyFRCrinkleClipFilter.h  PyFRData.cu  PyFRData.h  PyFRGradientFilter.cu  PyFRGradientFilter.h  PyFRMergePointsFilter.cu  PyFRMergePointsFilter.h  PyFRParallelSliceFilter.cu  PyFRParallelSliceFilter.h  PyFRWriter.cu  PyFRWriter.h
Source/PyFRStub/: PyFRContourData.h  PyFRContourFilter.h  PyFRConverter.h  PyFRCrinkleClipFilter.h  PyFRData.h  PyFRGradientFilter.h  PyFRMergePointsFilter.h  PyFRParallelSliceFilter.h  PyFRWriter.h
Source/vtkPyFR/: CMakeLists.txt  PyFR.xml  vtkPyFRAdaptor.cxx  vtkPyFRAdaptor.cxx.orig  vtkPyFRAdaptor.h  vtkPyFRAdaptor.h.orig  vtkPyFRContourData.cxx  vtkPyFRContourData.h  vtkPyFRContourDataAlgorithm.cxx  vtkPyFRContourDataAlgorithm.h  vtkPyFRContourDataConverter.cxx  vtkPyFRContourDataConverter.h  vtkPyFRContourFilter.cxx  vtkPyFRContourFilter.h  vtkPyFRContourMapper.cxx  vtkPyFRContourMapper.h  vtkPyFRCrinkleClipFilter.cxx  vtkPyFRCrinkleClipFilter.h  vtkPyFRData.cxx  vtkPyFRData.h  vtkPyFRDataAlgorithm.cxx  vtkPyFRDataAlgorithm.h  vtkPyFRDataConverter.cxx  vtkPyFRDataConverter.h  vtkPyFRGradientFilter.cxx  vtkPyFRGradientFilter.h  vtkPyFRIndexBufferObject.cxx  vtkPyFRIndexBufferObject.h  vtkPyFRMapper.cxx  vtkPyFRMapper.h  vtkPyFRMergePointsFilter.cxx  vtkPyFRMergePointsFilter.h  vtkPyFRParallelSliceFilter.cxx  vtkPyFRParallelSliceFilter.h  vtkPyFRPipeline.cxx  vtkPyFRPipeline.cxx.orig  vtkPyFRPipeline.cxx.rej  vtkPyFRPipeline.h  vtkPyFRPipeline.h.orig  vtkPyFRVertexBufferObject.cxx  (+5 more)
